<resources>
    <string name="app_name">HAPPY</string>
    <string name="butt">SUBMIT</string>
    <string name="c">Estimated Number Of Clothes</string>
    <string name="b">Estimated Number Of Books</string>
    <string name="bo">Books</string>
    <string name="wm">Writing Materials</string>
    <string name="nbo">Notebooks</string>
    <string name="f">Files And Folders</string>
    <string name="o">Others</string>
    <string name="g">Grains</string>
    <string name="p">Pulses</string>
    <string name="ch">Chocolates and Biscuits</string>
    <string name="gro">Estimated Quantity</string>
    <string name="pd">Pick Up Date</string>
    <string name="toy">Utilities</string>
    <string name="sp">Sports Materials</string>
    <string name="t">Toys</string>
    <string name="a">Adults</string>
    <string name="k">Kids</string>
    <string name="bl">Blankets</string>
    <string name="food">Estimated Number Of People Can Be Fed</string>
    <string name="v">Veg</string>
    <string name="nv">Non Veg</string>
    <string name="ty">Type</string>
    <string name="pa">Package</string>
    <string name="pt">Pick Up Time</string>
    <string name="pa1">Packed</string>
    <string name="pa2">Unpacked</string>
    <string name="ut">Utensils</string>
    <string name="fa">First Aid</string>


    <string name="app_name1">Happy</string>
    <string name="u1">USER NAME:</string>
    <string name="P1">PASSWORD:</string>
    <string name="l1">LOGIN</string>
    <string name="r1">REGISTER</string>
    <string name="a1">ADDRESS:</string>
    <string name="e1">EMAIL ID:</string>
    <string name="c1">CONTACT:</string>
    <string name="n1">NAME:</string>
    <string name="sh1">SPREADING HAPPINESS</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>


    <string name="action_help">HELP</string>
    <string name="past">PAST TRANSACTIONS</string>

</resources>
