<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/sm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toy"
            android:textSize="25sp"
            android:singleLine="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp"
            android:id="@+id/checkBox6" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t"
            android:id="@+id/checkBox7" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ut"
            android:id="@+id/checkBox8" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa"
            android:id="@+id/checkBox9" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o"
            android:id="@+id/checkBox10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pd"
            android:id="@+id/textView"
            android:textSize="25sp"/>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:yearListSelectorColor="@android:color/black"
            android:calendarTextColor="@color/colorPrimary"
            android:datePickerMode="spinner"
            android:startYear="2016"
            android:endYear="2100"
            android:id="@+id/datePicker" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butt"
            android:textSize="25sp"
            android:id="@+id/buttonUtilities"
            android:onClick="onUtilitiesSubmit"

            android:layout_gravity="center_horizontal" />


    </LinearLayout>

</ScrollView>
