<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="@drawable/sm">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textSize="25sp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/seekBar" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty"
            android:textSize="25sp"
            android:id="@+id/textView2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v"
            android:id="@+id/checkBox" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nv"
            android:id="@+id/checkBox2" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pt"
            android:id="@+id/textView"
            android:textSize="25sp"/>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:id="@+id/timePicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pd"
            android:textSize="25sp"
            android:id="@+id/textView4" />

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:yearListSelectorColor="@android:color/black"
            android:calendarTextColor="@color/colorPrimary"
            android:datePickerMode="spinner"
            android:startYear="2016"
            android:endYear="2100"
            android:id="@+id/datePicker" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butt"
            android:textSize="25sp"
            android:id="@+id/buttonFood"
            android:onClick="onFoodSubmit"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>


</ScrollView>